@@ -25,6 +25,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import javax.json.JsonPatch;
@@ -53,6 +54,7 @@ import org.openmetadata.schema.api.data.RestoreEntity;
 import org.openmetadata.schema.entity.Bot;
 import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.type.EntityHistory;
+import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.Relationship;
 import org.openmetadata.service.Entity;
@@ -68,6 +70,7 @@ import org.openmetadata.service.security.Authorizer;
 import org.openmetadata.service.security.DefaultAuthorizer;
 import org.openmetadata.service.security.SecurityUtil;
 import org.openmetadata.service.util.EntityUtil;
+import org.openmetadata.service.util.EntityUtil.Fields;
 import org.openmetadata.service.util.ResultList;
 
 @Slf4j
@@ -93,7 +96,8 @@ public class BotResource extends EntityResource<Bot, BotRepository> {
       User user = user(userName, domain, userName).withIsBot(true).withIsAdmin(false);
 
       // Add role corresponding to the bot to the user
-      user.setRoles(List.of(RoleResource.getRole(getRoleForBot(bot.getName()))));
+      // we need to set a mutable list here
+      user.setRoles(Arrays.asList(RoleResource.getRole(getRoleForBot(bot.getName()))));
       user = DefaultAuthorizer.addOrUpdateBotUser(user, config);
 
       bot.withId(UUID.randomUUID())
@@ -101,6 +105,21 @@ public class BotResource extends EntityResource<Bot, BotRepository> {
           .withUpdatedBy(userName)
           .withUpdatedAt(System.currentTimeMillis());
       dao.initializeEntity(bot);
+    }
+  }
+
+  @Override
+  protected void upgrade() throws IOException {
+    // This should be deleted once 0.13 is deprecated
+    // For all the existing bots, add ingestion bot role
+    ResultList<Bot> bots = dao.listAfter(null, Fields.EMPTY_FIELDS, new ListFilter(Include.NON_DELETED), 1000, null);
+    EntityReference ingestionBotRole = RoleResource.getRole(Entity.INGESTION_BOT_ROLE);
+    for (Bot bot : bots.getData()) {
+      User botUser = Entity.getEntity(bot.getBotUser(), "roles", Include.NON_DELETED);
+      if (botUser.getRoles() == null) {
+        botUser.setRoles(List.of(ingestionBotRole));
+        dao.addRelationship(botUser.getId(), ingestionBotRole.getId(), Entity.USER, Entity.ROLE, Relationship.HAS);
+      }
     }
   }
 
